sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:98: error: not found: value posEchange
  deplace(currBase, posEchange);
                    ^